--- a/recruit-system/recruit-web/public/index.html
+++ b/recruit-system/recruit-web/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./iconfont.css" />
     <script src="//at.alicdn.com/t/font_1104271_so151lbumpq.js"></script>
     <script charset="utf-8" src="https://map.qq.com/api/js?v=2.exp&key=P6DBZ-WVYCJ-A4HFW-FQ443-AP7XS-KIFSV"></script>
-    <title>校企直聘网</title>
+    <title>校企招聘网</title>
     <style>
       #loader {
         position: fixed;
